Sun Apr 17 07:51:55 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* ace/config-lite.h (ACE_EXPORT_SINGLETON_DECLARATION):
	  (ACE_EXPORT_SINGLETON_DECLARE):

	  Added suitable defaults when ACE_HAS_CUSTOM_EXPORT_MACROS is
	  defined and these aren't.

Sun Apr 17 17:34:38 2005  Olli Savia  <ops@iki.fi>

        * ace/config-win32-interix.h:
        * m4/config_h.m4:
          Removed references to ACE_HAS_SYSCALL_H. It is no longer
          used in ACE/TAO code.

Sat Apr 16 20:47:11 2005  Emre Turkay  <turkaye@dre.vanderbilt.edu>

        * bin/ciao_tests.lst:

          The required constraints Exceptions and !STATIC are added to the
          CIAO test.

Sat Apr 16 20:37:07 2005  Emre Turkay  <turkaye@dre.vanderbilt.edu>

        * bin/auto_run_tests.pl:
        * bin/ciao_tests.lst:

          Added auto_build tests for CIAO.

Sat Apr 16 16:33:53 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* ace/Parse_Node.inl:
	* ace/Parse_Node.cpp:

	  Moved inlined virtual destructors out of line.  Addresses
	  unresolved symbol errors when using g++ 4.0 with a default
	  symbol visibility set to "hidden".

Sat Apr 16 09:18:42 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* ace/Reactor.inl:
	* ace/Reactor.cpp:

	  Moved inlined virtual methods out of line.  Addresses unresolved
	  symbol errors when using g++ 4.0's "-fvisibility-inlines-hidden"
	  command line option.  The methods can be inlined again once/if
	  we make the methods non-virtual.  Since the ACE_Reactor now
	  implements the Bridge design pattern, they no longer need to be
	  virtual.  However, they will remain virtual for a while due to
	  potential user legacy app / backward compatibility issues.

Fri Apr 15 11:36:45 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* ace/Timeprobe.h:

	  Drop the semi-colon after the ACE_SINGLETON_DECLARE.  The
	  convention is not to add a trailing semi-colon.  Addresses a g++
	  4.0 CVS snapshot error about an extra semi-colon.
